Revision history for Dist-Zilla-PluginBundle-DAGOLDEN

{{$NEXT}}

0.078     2016-08-09 15:14:28-04:00 America/New_York

    [ADDED]

    - Added 'no_copy_files' option to skip Makefile.PL or cpanfile copying

0.077     2016-06-20 15:32:53-04:00 America/New_York

    [FIXED]

    - Fixed failing test under Dist::Zilla 6.005 or later

0.076     2015-07-16 11:27:10-04:00 America/New_York

    [CHANGED]

    - Swapped in SurgicalPodWeaver for PodWeaver

0.075     2015-06-12 11:40:31-04:00 America/New_York

    [CHANGED]

    - Swapped in CopyFilesFromBuild::Filtered for the unfiltered version.
      This gets rid of "generated by" lines in Makefile.PL that cause
      unnecessary file churn as Dist::Zilla is upgraded.

0.074     2015-01-22 17:07:41-05:00 America/New_York

    [CHANGED]

    - Allow dirty Makefile.PL/cpanfile and commit it before tagging.

0.073     2014-12-10 16:36:34-05:00 America/New_York

    [CHANGED]

    - Swapped out ReadmeFromPod for Pod2Readme, which is simpler and
      lighter.

0.072     2014-09-26 16:23:55-04:00 America/New_York

    [FIXED]

    - Fixed bug where version bumps weren't being committed after release

0.071     2014-09-26 11:56:23-04:00 America/New_York

    [*** INCOMPATIBLE CHANGES ***]

    - No longer copies cpanfile after build (except under auto_version);
      instead copies Makefile.PL.  With a Makefile.PL and embedded
      $VERSION, this makes a repo checkout ready for end-users without
      needing to know anything about Dist::Zilla.

0.070     2014-09-25 17:36:54-04:00 America/New_York

    [*** INCOMPATIBLE CHANGES ***]

    - Switched version handling from Git::NextVersion + OurPkgVersion to
      RewriteVerson + BumpVersionAfterRelease so that files in the repo
      will have a $VERSION.  This will require adding a $VERSION statement
      back to all modules before releasing.  Also added an "auto_version"
      option to allow AutoVersion + PkgVersion for distributions that need
      it.

    [CHANGED]
